# robocon26_pc

./: .gitignore  COMMUNICATION_README.md  IMU通信协议.md  README.md  SETUP_GUIDE.md  fix_math.ps1  fix_script.ps1  fix_timeout.ps1
scripts/: fix_setup.bash  install_deps.sh  setup_all.sh  setup_autostart.sh  setup_udev_rules.sh
src/robocom_arm_control/: package.xml  setup.py
src/robocom_arm_control/robocom_arm_control/: __init__.py  arm_control_node.py
src/robocom_bringup/: package.xml  setup.py
src/robocom_bringup/config/: bringup_params.yaml
src/robocom_bringup/launch/: all_start.launch.py  radar.launch.py
src/robocom_bringup/robocom_bringup/: __init__.py  autostart.py
src/robocom_interfaces/: CMakeLists.txt  package.xml
src/robocom_interfaces/msg/: ArmCommand.msg  BlockInfo.msg  MathResult.msg  MissionStatus.msg  MotionCmd.msg  RobotState.msg
src/robocom_interfaces/srv/: SetCoordinate.srv  StartMission.srv
src/robocom_localization/: package.xml  setup.py
src/robocom_localization/config/: ekf.yaml
src/robocom_localization/robocom_localization/: __init__.py  coordinate_manager.py  imu_filter.py  localization_node.py
src/robocom_math_solver/: package.xml  setup.py
src/robocom_math_solver/config/: math_solver_params.yaml
src/robocom_math_solver/robocom_math_solver/: __init__.py  math_solver_node.py
src/robocom_motion_control/: package.xml  setup.py
src/robocom_motion_control/config/: motion_params.yaml
src/robocom_motion_control/robocom_motion_control/: __init__.py  motion_control_node.py  motion_control_node.py.tmp  sbus_bridge.py  virtual_remote.py
src/robocom_motion_control/robocom_motion_control/host/: quadruped_control_cli.py  quadruped_link.py  quadruped_protocol.py
src/robocom_navigation/: package.xml  setup.py
src/robocom_navigation/config/: nav_params.yaml
src/robocom_navigation/robocom_navigation/: __init__.py  navigation_node.py
src/robocom_task_scheduler/: package.xml  setup.py
src/robocom_task_scheduler/robocom_task_scheduler/: __init__.py  task_scheduler_node.py
src/robocom_ui/: package.xml  setup.py
src/robocom_ui/launch/: ui.launch.py
src/robocom_ui/robocom_ui/: __init__.py  debug_ui.py  ui_main.py  usb_monitor.py
src/robocom_vision/: package.xml  setup.py
src/robocom_vision/config/: vision_params.yaml
src/robocom_vision/robocom_vision/: __init__.py  color_mask_detector.py  depth_helper.py  yolo_block_detector.py
