<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypespec="1.0"?>
<package format="3">
  <name>robocom_ui</name>
  <version>1.0.0</version>
  <description>PySide6 upper-computer UI for RoboCom competition: one-click start, math display, radar coords, process monitor</description>
  <maintainer email="team@robocom.local">robocom-team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robocom_interfaces</exec_depend>
  <exec_depend>PySide6</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
